--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="/logos/centrodecompras.jpg" alt="Centro de Compras" loading="lazy" id="site-logo">
     </div>
     <div class="header-text">
-      <h1>Centro de Compras</h1>
+      <h1>Centro de Compra</h1>
       <p>As melhores ofertas em um só lugar!</p>
     </div>
   </header>
