--- a/index.html
+++ b/index.html
@@ -3,15 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados.">
+  <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
+  <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
+  <meta property="og:image" content="/logos/centrodecompras.jpg">
+  <meta property="og:url" content="https://centrodecompra.com.br/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Centro de Compras - Ofertas e Descontos">
+  <meta name="twitter:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
+  <meta name="twitter:image" content="/logos/centrodecompras.jpg">
   <title>Centro de Compras</title>
-  <link rel="stylesheet" href="/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="/style.css">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body>
   <header class="site-header">
     <div class="logo-container">
-      <img src="/logos/centrodecompras.jpg" alt="Centro de Compras" loading="lazy" id="site-logo">
+      <a href="#"><img src="/logos/centrodecompras.jpg" alt="Centro de Compras" id="site-logo"></a>
     </div>
     <div class="header-text">
       <h1>Centro de Compras</h1>
@@ -21,29 +31,32 @@
   <nav>
     <a href="#" onclick="filtrarPorCategoria('todas')">Todas as Categorias</a>
     <a href="#" onclick="filtrarPorLoja('todas')">Todas as Lojas</a>
+    <a href="cupom.html">Cupom de desconto</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
   </nav>
-  <main class="main-container">
-    <aside class="sidebar">
-      <h3>Categorias</h3>
-      <ul>
-        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')"><i class="fas fa-list"></i> Todas</li>
-        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')"><i class="fas fa-laptop"></i> Eletrônicos</li>
-        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')"><i class="fas fa-tshirt"></i> Moda</li>
-        <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')"><i class="fas fa-dumbbell"></i> Fitness</li>
-        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')"><i class="fas fa-home"></i> Casa</li>
-        <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')"><i class="fas fa-spa"></i> Beleza</li>
-        <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')"><i class="fas fa-futbol"></i> Esportes</li>
-        <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')"><i class="fas fa-book"></i> Livros</li>
-        <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')"><i class="fas fa-baby"></i> Infantil</li>
-        <li class="categoria-item" data-categoria="celulares" onclick="filtrarPorCategoria('celulares')"><i class="fas fa-mobile-alt"></i> Celulares</li>
-        <li class="categoria-item" data-categoria="eletrodomesticos" onclick="filtrarPorCategoria('eletrodomesticos')"><i class="fas fa-blender"></i> Eletrodomésticos</li>
-        <li class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')"><i class="fas fa-paw"></i> Pet</li>
-        <li class="categoria-item" data-categoria="jardinagem" onclick="filtrarPorCategoria('jardinagem')"><i class="fas fa-leaf"></i> Jardinagem</li>
-        <li class="categoria-item" data-categoria="automotivo" onclick="filtrarPorCategoria('automotivo')"><i class="fas fa-car"></i> Automotivo</li>
-        <li class="categoria-item" data-categoria="gastronomia" onclick="filtrarPorCategoria('gastronomia')"><i class="fas fa-utensils"></i> Gastronomia</li>
-        <li class="categoria-item" data-categoria="games" onclick="filtrarPorCategoria('games')"><i class="fas fa-gamepad"></i> Games</li>
-      </ul>
-    </aside>
+  <aside class="sidebar">
+    <h3>Categorias</h3>
+    <ul>
+      <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')"><i class="fas fa-list"></i> Todas</li>
+      <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')"><i class="fas fa-laptop"></i> Eletrônicos</li>
+      <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')"><i class="fas fa-tshirt"></i> Moda</li>
+      <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')"><i class="fas fa-dumbbell"></i> Fitness</li>
+      <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')"><i class="fas fa-home"></i> Casa</li>
+      <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')"><i class="fas fa-spa"></i> Beleza</li>
+      <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')"><i class="fas fa-futbol"></i> Esportes</li>
+      <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')"><i class="fas fa-book"></i> Livros</li>
+      <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')"><i class="fas fa-baby"></i> Infantil</li>
+      <li class="categoria-item" data-categoria="celulares" onclick="filtrarPorCategoria('celulares')"><i class="fas fa-mobile-alt"></i> Celulares</li>
+      <li class="categoria-item" data-categoria="eletrodomesticos" onclick="filtrarPorCategoria('eletrodomesticos')"><i class="fas fa-blender"></i> Eletrodomésticos</li>
+      <li class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')"><i class="fas fa-paw"></i> Pet</li>
+      <li class="categoria-item" data-categoria="jardinagem" onclick="filtrarPorCategoria('jardinagem')"><i class="fas fa-leaf"></i> Jardinagem</li>
+      <li class="categoria-item" data-categoria="automotivo" onclick="filtrarPorCategoria('automotivo')"><i class="fas fa-car"></i> Automotivo</li>
+      <li class="categoria-item" data-categoria="gastronomia" onclick="filtrarPorCategoria('gastronomia')"><i class="fas fa-utensils"></i> Gastronomia</li>
+      <li class="categoria-item" data-categoria="games" onclick="filtrarPorCategoria('games')"><i class="fas fa-gamepad"></i> Games</li>
+    </ul>
+  </aside>
+  <main>
     <section>
       <div class="lojas-parceiras">
         <h3>Lojas Parceiras</h3>
@@ -52,29 +65,30 @@
             <span>Todas as Lojas</span>
           </div>
           <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
-            <img src="/logos/amazon.png" alt="Amazon" loading="lazy">
+            <img src="/logos/amazon.png" alt="Amazon">
           </div>
           <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
-            <img src="/logos/magalu.png" alt="Magalu" loading="lazy">
+            <img src="/logos/magalu.png" alt="Magalu">
           </div>
           <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">
-            <img src="/logos/shein.png" alt="Shein" loading="lazy">
+            <img src="/logos/shein.png" alt="Shein">
           </div>
           <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
-            <img src="/logos/shopee.png" alt="Shopee" loading="lazy">
+            <img src="/logos/shopee.png" alt="Shopee">
           </div>
           <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
-            <img src="/logos/mercadolivre.png" alt="Mercado Livre" loading="lazy">
+            <img src="/logos/mercadolivre.jpg" alt="Mercado Livre">
           </div>
           <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')">
-            <img src="/logos/alibaba.png" alt="Alibaba" loading="lazy">
+            <img src="/logos/alibaba.png" alt="Alibaba">
           </div>
         </div>
       </div>
-      <input type="text" id="busca" class="barra-busca" placeholder="Buscar produtos...">
+      <input type="text" id="busca" class="barra-busca" placeholder="Buscar produtos..." aria-label="Buscar produtos" aria-describedby="busca-instrucao">
+      <span id="busca-instrucao" style="display: none;">Digite o nome do produto para filtrar os resultados.</span>
       <p id="busca-feedback" class="busca-feedback"></p>
       <div id="loading-spinner" class="loading-spinner"></div>
-      <div id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</div>
+      <div id="mensagem-vazia" class="mensagem-vazia">Nenhum produto encontrado.</div>
       <div id="error-message" style="display: none; color: red;"></div>
       <div id="grid-produtos" class="grid-produtos"></div>
       <div class="pagination">
@@ -82,24 +96,37 @@
         <span id="page-info">Página 1</span>
         <button id="next-page">Próximo</button>
       </div>
+      <div class="social-links">
+        <a href="https://www.tiktok.com/@cdc.centraldecompas?_t=ZM-8vYQlF9u1dH&_r=1" target="_blank">
+          <div class="icon"><img src="/imagens/tiktok.png" alt="TikTok"></div>
+          <span>TikTok</span>
+        </a>
+        <a href="https://www.instagram.com/centro_de_compras" target="_blank">
+          <div class="icon"><img src="/imagens/instagram.png" alt="Instagram"></div>
+          <span>Instagram</span>
+        </a>
+        <a href="https://x.com/centro_de_compras" target="_blank">
+          <div class="icon"><img src="/imagens/x.png" alt="X"></div>
+          <span>X</span>
+        </a>
+        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank">
+          <div class="icon"><img src="/imagens/youtube.png" alt="YouTube"></div>
+          <span>YouTube</span>
+        </a>
+      </div>
+      <a href="https://wa.me/5511999999999" target="_blank" class="whatsapp"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+      <a href="https://t.me/centro_de_compras" target="_blank" class="telegram"><i class="fab fa-telegram"></i> Telegram</a>
+      <div class="robo-assistente">
+        <a href="https://wa.me/5511999999999" target="_blank">
+          <img src="/imagens/robo.gif" alt="Assistente Virtual" class="robo-imagem">
+          <span class="robo-texto">Fale com nosso assistente!</span>
+        </a>
+      </div>
     </section>
+    <div class="credibilidade-nota">
+      <p><strong>Nota de Credibilidade:</strong> O Centro de Compras é um agregador de links de produtos de lojas confiáveis. Não vendemos produtos diretamente, mas conectamos você às melhores ofertas de lojas parceiras verificadas.</p>
+    </div>
   </main>
-  <div class="social-links">
-    <a href="https://www.instagram.com/centro_de_compras" target="_blank">
-      <div class="icon"><img src="/imagens/instagram.png" alt="Instagram"></div>
-      <span>Instagram</span>
-    </a>
-    <a href="https://x.com/centro_de_compras" target="_blank">
-      <div class="icon"><img src="/imagens/x.png" alt="X"></div>
-      <span>X</span>
-    </a>
-  </div>
-  <a href="https://wa.me/5511999999999" target="_blank" class="whatsapp"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-  <a href="https://t.me/centro_de_compras" target="_blank" class="telegram"><i class="fab fa-telegram"></i> Telegram</a>
-  <div class="robo-assistente">
-    <img src="/imagens/robo.gif" alt="Assistente Virtual" class="robo-imagem">
-    <span class="robo-texto">Fale com nosso assistente!</span>
-  </div>
   <div class="modal" id="imageModal">
     <div class="modal-content">
       <button class="modal-close" onclick="closeModal()">X</button>
@@ -110,9 +137,6 @@
         <div class="carrossel-dots" id="modalCarrosselDots"></div>
       </div>
     </div>
-  </div>
-  <div class="credibilidade-nota">
-    <p><strong>Nota de Credibilidade:</strong> O Centro de Compras é um agregador de links de produtos de lojas confiáveis. Não vendemos produtos diretamente, mas conectamos você às melhores ofertas de lojas parceiras verificadas.</p>
   </div>
   <footer>
     <p>&copy; <span id="year"></span> Centro de Compras. Todos os direitos reservados.</p>
